-------------------------------------------------------------------------------
GCJ Command Line v1.0-beta1, released 2011-04-29

[Feature]: Initial release.